[project]
name = "waypoints"
version = "0.1.0"
description = "WIP: For easy workflow iteration"
readme = "README.md"
authors = [
    { name = "joypauls", email = "joypaulsen3@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
